atlassian/atlassian-dc/crowd/crowd-service.yaml
apiVersion: v1                #crowd Service
kind: Service
metadata:
  name: crowd-service
  labels:
    app: crowd-service
spec:
  type: NodePort
  ports:
   - port: 8095
  selector:
   app: crowd
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
---
apiVersion: v1                #PostgreSQL Service
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres
