atlassian/atlassian-dc/crowd/crowd.yaml
apiVersion: extensions/v1beta1    # crowd Deployment
kind: Deployment
metadata:
  labels:
    app: crowd
  name: crowd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: crowd
      name: crowd
    spec:
      containers:
        - name: crowd
          image: "atlassian/crowd:4.0.0"
          ports:
            - containerPort: 8095
          resources:
            limits:
              cpu: "2"
              memory: "4G"
            requests:
              cpu: "1"
              memory: "2G"
          volumeMounts:
            - name: "crowdhome"
              mountPath: /var/atlassian/application-data/crowd
      volumes:
        - name: crowdhome
          persistentVolumeClaim:
            claimName: crowd-home-pv-claim
---
apiVersion: v1                #crowd Service
kind: Service
metadata:
  name: crowd-service
  labels:
    app: crowd-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8095
  selector:
    app: crowd
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
  type: LoadBalancer
